--- a/index.html
+++ b/index.html
@@ -337,13 +337,11 @@
         </div>
       </section>
       <hr class="hr1">
-      <!-- <section id="team" class="team section-bg">
+      <section id="team" class="team section-bg">
         <div class="container aos-init aos-animate" data-aos="fade-up">
   
           <div class="section-title">
             <h2>Team</h2>
-            <h3>Our Hardworking <span>Team</span></h3>
-            <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
           </div>
   
           <div class="row">
@@ -360,62 +358,8 @@
                   </div>
                 </div>
                 <div class="member-info">
-                  <h4>Walter White</h4>
-                  <span>Chief Executive Officer</span>
-                </div>
-              </div>
-            </div>
-  
-            <div class="col-lg-3 col-md-6 d-flex align-items-stretch aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
-              <div class="member">
-                <div class="member-img">
-                    <img src="images\team\team-1.jpg" class="img-fluid" alt="">
-                    <div class="social">
-                    <a href=""><i class="fa fa-twitter"></i></a>
-                    <a href=""><i class="fa fa-facebook"></i></a>
-                    <a href=""><i class="fa fa-instagram"></i></a>
-                    <a href=""><i class="fa fa-linkedin"></i></a>
-                  </div>
-                </div>
-                <div class="member-info">
-                  <h4>Sarah Jhonson</h4>
-                  <span>Product Manager</span>
-                </div>
-              </div>
-            </div>
-  
-            <div class="col-lg-3 col-md-6 d-flex align-items-stretch aos-init aos-animate" data-aos="fade-up" data-aos-delay="300">
-              <div class="member">
-                <div class="member-img">
-                    <img src="images\team\team-1.jpg" class="img-fluid" alt="">
-                    <div class="social">
-                    <a href=""><i class="fa fa-twitter"></i></a>
-                    <a href=""><i class="fa fa-facebook"></i></a>
-                    <a href=""><i class="fa fa-instagram"></i></a>
-                    <a href=""><i class="fa fa-linkedin"></i></a>
-                  </div>
-                </div>
-                <div class="member-info">
-                  <h4>William Anderson</h4>
-                  <span>CTO</span>
-                </div>
-              </div>
-            </div>
-  
-            <div class="col-lg-3 col-md-6 d-flex align-items-stretch aos-init aos-animate" data-aos="fade-up" data-aos-delay="400">
-              <div class="member">
-                <div class="member-img">
-                    <img src="images\team\team-1.jpg" class="img-fluid" alt="">
-                    <div class="social">
-                    <a href=""><i class="fa fa-twitter"></i></a>
-                    <a href=""><i class="fa fa-facebook"></i></a>
-                    <a href=""><i class="fa fa-instagram"></i></a>
-                    <a href=""><i class="fa fa-linkedin"></i></a>
-                  </div>
-                </div>
-                <div class="member-info">
-                  <h4>Amanda Jepson</h4>
-                  <span>Accountant</span>
+                  <h4>M. Alain BOUTCHANG</h4>
+                  <span>Expert financier CNCEF, Consultant international et Enseignant associé</span>
                 </div>
               </div>
             </div>
@@ -423,7 +367,7 @@
           </div>
   
         </div>
-      </section> -->
+      </section>
       <hr class="hr1">
       <section id="gallery" class="gallery">
         <div class="container">
@@ -542,12 +486,12 @@
                             <h3>Vous êtes prêts à adhérer ?</h3>
                         </div>
 						
-						<div class="footer-right">
-							<form method="get" action="#">
-								<input placeholder="Subscribe our newsletter.." name="search">
-								<i class="fa fa-envelope-o"></i>
-							</form>
-						</div>                        
+                        <div class="footer-right">
+                          <div class="lien">
+                                            <a href="Présentation CGA CoPME (2).pdf" download="Présentation">Télecharger la brochure
+                                              <img src="icone.svg">  </a>
+                                            </div>
+                        </div>                        
                     </div><!-- end clearfix -->
                 </div><!-- end col -->
             </div><!-- end row -->
