--- a/about-us.html
+++ b/about-us.html
@@ -396,10 +396,10 @@
                         </div>
 						
 						<div class="footer-right">
-							<form method="get" action="#">
-								<input placeholder="Subscribe our newsletter.." name="search">
-								<i class="fa fa-envelope-o"></i>
-							</form>
+							<div class="lien">
+                                <a href="Présentation CGA CoPME (2).pdf" download="Présentation">Télecharger la brochure
+                                  <img src="icone.svg">  </a>
+                                </div>
 						</div>                        
                     </div><!-- end clearfix -->
                 </div><!-- end col -->
